--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -11,7 +10,7 @@
 
     <groupId>com.baxter.config.processor.pe</groupId>
     <artifactId>config-processor-price-engine</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.1</version>
 
     <name>Configuration Processor for Price Engine</name>
     <description>Configuration processor to be used with Baxter Configuration Server.</description>
@@ -24,7 +23,8 @@
         <connection>scm:git:ssh://git@git.cloudbees.com/baxter/config-processor-price-engine.git</connection>
         <developerConnection>scm:git:ssh://git@git.cloudbees.com/baxter/config-processor-price-engine.git</developerConnection>
         <url>ssh://git@git.cloudbees.com/baxter/config-processor-price-engine.git</url>
-    </scm>
+      <tag>config-processor-price-engine-1.3.1</tag>
+  </scm>
 
     <issueManagement>
         <system>JIRA</system>
