--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,7 +11,7 @@
 
     <groupId>com.baxter.config.processor.pe</groupId>
     <artifactId>config-processor-price-engine</artifactId>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>1.3.1-SNAPSHOT</version>
 
     <name>Configuration Processor for Price Engine</name>
     <description>Configuration processor to be used with Baxter Configuration Server.</description>
@@ -23,8 +24,7 @@
         <connection>scm:git:ssh://git@git.cloudbees.com/baxter/config-processor-price-engine.git</connection>
         <developerConnection>scm:git:ssh://git@git.cloudbees.com/baxter/config-processor-price-engine.git</developerConnection>
         <url>ssh://git@git.cloudbees.com/baxter/config-processor-price-engine.git</url>
-      <tag>HEAD</tag>
-  </scm>
+    </scm>
 
     <issueManagement>
         <system>JIRA</system>
@@ -327,6 +327,7 @@
                             <version>1.0-alpha-6</version>
                             <configuration>
                                 <debug>true</debug>
+                                <name>${unix.package}</name>
                                 <contact>${project.organization.name}</contact>
                                 <contactEmail>info.config@baxter-it.com</contactEmail>
                                 <description>${project.description}</description>
@@ -357,6 +358,7 @@
                                     <configuration>
                                         <deb>
                                             <depends>config-server(&gt;= ${config.dep.version}),statistics-config-processor</depends>
+                                            <replaces>price-engine-config-processor</replaces>
                                         </deb>
                                         <assembly combine.children="append">
                                             <copyFile>
@@ -406,7 +408,7 @@
                                 <defaultDirmode>755</defaultDirmode>
                                 <needarch>false</needarch>
                                 <provides>
-                                    <provide>baxter-config-processor-price-engine</provide>
+                                    <provide>${unix.package}</provide>
                                 </provides>
                                 <conflicts>
                                     <conflict>baxter-price-engine-config-processor</conflict>
@@ -539,6 +541,7 @@
         <unix.application.group.name>Config</unix.application.group.name>
         <unix.user>baxter</unix.user>
         <unix.group>baxter</unix.group>
+        <unix.package>baxter-config-processor-price-engine</unix.package>
         <!-- Standard installation directories -->
         <unix.application.lib.dir>/usr/share/java</unix.application.lib.dir>
         <config.processors.lib.dir>/usr/share/configuration-processors</config.processors.lib.dir>
