--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <name>Configuration Processor for Price Engine</name>
     <description>Configuration processor to be used with Baxter Configuration Server.</description>
 
-    <url>https://repository-baxter.forge.cloudbees.com/private/sites/config-processor/pe</url>
+    <url>http://baxter.artifactoryonline.com/baxter/sites/config-processor/pe</url>
 
     <inceptionYear>2013</inceptionYear>
 
@@ -50,7 +50,7 @@
                 <site>
                     <id>cloudbees-private-repository</id>
                     <name>Baxter Configuration Site</name>
-                    <url>dav:https://repository-baxter.forge.cloudbees.com/private/sites/config-processor/pe</url>
+                    <url>dav:http://baxter.artifactoryonline.com/baxter/sites/config-processor/pe</url>
                 </site>
             </distributionManagement>
         </profile>
