--- a/pom.xml
+++ b/pom.xml
@@ -43,15 +43,26 @@
     </build>
 
     <profiles>
-        <profile>
+	    
+	 <profile>
 			<id>Distribution-Artifactory</id>
 			<distributionManagement>
+				<repository>
+					<id>artifactory-release-repository</id>
+					<name>Artifactory Release Repository</name>
+					<url>http://baxter.artifactoryonline.com/baxter/baxter-releases</url>
+				</repository>
+				<snapshotRepository>
+					<id>artifactory-snapshot-repository</id>
+					<name>Artifactory Snapshot Repository</name>
+					<url>http://baxter.artifactoryonline.com/baxter/baxter-snapshots</url>
+				</snapshotRepository>
 				<site>
 					<id>artifactory-sites-repository</id>
-					<url>dav:http://baxter.artifactoryonline.com/baxter/sites/price-engine/master/</url>
+					<url>dav:http://baxter.artifactoryonline.com/baxter/sites/parent/</url>
 				</site>
 			</distributionManagement>
-		</profile>
+		</profile>   
         <profile>
             <id>Distribution-CloudBees</id>
             <distributionManagement>
