--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    
     <parent>
         <groupId>com.baxter.config</groupId>
         <artifactId>baxter-config-processor-parent</artifactId>
@@ -43,7 +43,26 @@
     </build>
 
     <profiles>
-
+	    
+	 <profile>
+			<id>Distribution-Artifactory</id>
+			<distributionManagement>
+				<repository>
+					<id>artifactory-release-repository</id>
+					<name>Artifactory Release Repository</name>
+					<url>http://baxter.artifactoryonline.com/baxter/baxter-releases</url>
+				</repository>
+				<snapshotRepository>
+					<id>artifactory-snapshot-repository</id>
+					<name>Artifactory Snapshot Repository</name>
+					<url>http://baxter.artifactoryonline.com/baxter/baxter-snapshots</url>
+				</snapshotRepository>
+				<site>
+					<id>artifactory-sites-repository</id>
+					<url>dav:http://baxter.artifactoryonline.com/baxter/sites/parent/</url>
+				</site>
+			</distributionManagement>
+		</profile>   
         <profile>
             <id>Distribution-CloudBees</id>
             <distributionManagement>
