--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.baxter.config</groupId>
         <artifactId>baxter-config-processor-parent</artifactId>
-        <version>1.4</version>
+        <version>1.4.14</version>
     </parent>
 
     <groupId>com.baxter.config.processor.pe</groupId>
@@ -174,6 +174,7 @@
                 <groupId>com.baxter.config</groupId>
                 <artifactId>baxter-config-server</artifactId>
                 <version>${config.dep.version}</version>
+                <classifier>deployable</classifier>
                 <type>war</type>
             </dependency>
 
@@ -182,7 +183,7 @@
     </dependencyManagement>
 
     <properties>
-        <config.dep.version>1.4</config.dep.version>
+        <config.dep.version>1.4.14</config.dep.version>
     </properties>
 
 </project>
